Fixed pin scroll, now testing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  position: relative;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
@@ -17,6 +17,10 @@ body {
   will-change: overflow-y;
 }
 
+#scrollable {
+  width: 100%;
+  height: auto;
+}
 .nothing {
   height: 100vh !important;
   width: 100%;
@@ -80,9 +84,9 @@ body {
   flex-direction: row;
   justify-content: space-around;
 }
-#fixed {
-  position: fixed;
-}
+/* #fixed {
+  position: relative;
+} */
 @media (max-width: 700px) {
   .header {
     font-size: 50px;
